--- a/project_file.ipynb
+++ b/project_file.ipynb
@@ -4379,6 +4379,13 @@
    "source": [
     "sns.heatmap(corr_matrix, vmin=-1, vmax=1)\n",
     "plt.show()"
+    "fig, ax = plt.subplots(figsize=(8, 7))\n",
+    "sns.heatmap(corr_matrix[['averageRating', 'numVotes', 'log_score']], vmin=-1, vmax=1)\n",
+    "ax.set_xticklabels([\"Priemerné skóre\", \"Počet hlasov\", \"Log skóre\"])\n",
+    "ax.set_title(\"Závislosť skóre od 1 žánru\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -5709,6 +5716,10 @@
    ],
    "source": [
     "sns.heatmap(corr_matrix, vmin=-1, vmax=1 )\n",
+    "fig, ax = plt.subplots(figsize=(8, 7))\n",
+    "sns.heatmap(corr_matrix[['log_score']], vmin=-1, vmax=1 )\n",
+    "ax.set_title(\"Závislosť skóre podľa viacerých žánrov\")\n",
+    "ax.set_xticklabels([\"Log skóre\"])\n",
     "plt.show()"
    ]
   },
