--- a/project_file.ipynb
+++ b/project_file.ipynb
@@ -4650,6 +4650,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 7))\n",
     "sns.heatmap(corr_matrix[['averageRating', 'numVotes', 'log_score']], vmin=-1, vmax=1)\n",
+    "sns.heatmap(corr_matrix.iloc[3:, :3], vmin=-1, vmax=1)\n",
     "ax.set_title(\"Korelácia žánru so skóre\")\n",
     "ax.set_xticklabels([\"Priemerné skóre\", \"Počet hlasov\", \"Log skóre\"])\n",
     "plt.show()"
@@ -5817,9 +5818,12 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 7))\n",
     "sns.heatmap(corr_matrix[['log_score']], vmin=-1, vmax=1)\n",
+    "sns.heatmap(corr_matrix.iloc[3:, :3], vmin=-1, vmax=1)\n",
     "ax.set_title(\"Korelácia skupiny žánrov so skóre\")\n",
     "ax.set_xticklabels([\"Log skóre\"])\n",
     "plt.show()"
+    "ax.set_xticklabels([\"Priemerné skóre\", \"Počet hlasov\", \"Log skóre\"])\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -5844,6 +5848,7 @@
    ],
    "source": [
     "print(corr_matrix[\"log_score\"].iloc[3:].sort_values(ascending=False).head().to_markdown()) #.describe().to_markdown()"
+    "print(corr_matrix[\"log_score\"].iloc[3:].sort_values(ascending=False).describe().to_markdown()) #.describe().to_markdown()"
    ]
   },
   {
